# command-line-module

./: CMakeLists.txt  LICENSE  README.md
Config/: CapabilitiesSchema.xml  Config.xml
Source/: CMakeLists.txt  CommandLineModuleMain.cpp
